# py-test-framework

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: playwright.yml
tests/: test_first_name.py  test_last_name.py  test_registration.py
tests/pages/: base_page.py  registration_page.py
